--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
+    "lucide-react": "^0.447.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "tailwindcss": "^3.4.13",
     "web-vitals": "^2.1.4"
   },
