--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.9",
+    "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,8 +30,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "build:css": "tailwindcss build ./src/index.css -o ./dist/output.css",
-    "watch:css": "tailwindcss build ./src/index.css -o ./dist/output.css --watch"
+    "build:css": "tailwindcss -i ./src/index.css -o ./src/styles/tailwind.css",
+    "watch:css": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
   "eslintConfig": {
     "extends": [
